feat: Implement API server and enhance cloud sync
Introduces a dedicated API server using Express, replacing the previous Vite development server setup. This change also adds an auto-sync feature to the cloud service, allowing for background synchronization of data. The `types.ts` file has been updated to remove an unused enum value. Additionally, the `index.html` file now includes a custom CSS animation for spinning elements.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx server.ts",
+    "dev": "tsx api/index.ts",
     "build": "vite build",
+    "start": "tsx api/index.ts",
     "lint": "tsc --noEmit",
     "preview": "vite preview"
   },
